<resources>
    <string name="app_name">Mi Calculadora</string>
    <string name="title">Hola Mundo</string>
    <string name="titulo">Mi Calculadora</string>
    <string name="numero1">Digite primer numero</string>
    <string name="numero2">Digite segundo numero</string>
    <string name="sumar">+</string>
    <string name="restar">-</string>
    <string name="multiplicar">*</string>
    <string name="dividir">/</string>
    <string name="resultado">Resultado:</string>
    <string name="calcular">Calcular</string>
</resources>